This is a summary of the changes in KTIGCC since the first alpha release:

CVS HEAD (2006-10-24):

* Added Anjuta 2 project, removed Anjuta 1 project.


KTIGCC 1.05 (2006-10-24):

* Added missing -lkdeui to link line (needed for OS X).
* Fixed RPM specfile dependency to work on FC6.


KTIGCC 1.04 (2006-09-25):

* Use explicit memset to zero the buffer in loadFileText because the C++ way
  doesn't seem to work on OS X.
* Link all required KDE libraries explicitly instead of relying on the linker
  pulling them in (which the OS X linker doesn't do).
* Use the .ui, .moc and .obj subdirectories on all platforms.
* Don't try to set an rpath on OS X, it is neither supported nor needed.


KTIGCC 1.03 (2006-09-17):

* Don't show symbol info for reserved keywords even in the case of an exact
  match (fixes unhelpful prototype help for "asm").
* Added workaround for rpmbuild 4.4.2 with tar 1.15.91 to make rpm target.


KTIGCC 1.02 (2006-09-05):

* Fixed inverted logic bug causing the Debug menu and toolbar buttons to get
  hidden during File/New/Project.
* Fixed the Project Options dialog not reacting correctly to changing the target
  from a regular program to another target or the other way round.
* Fixed detection of "??=" in source file splitting.
* Fixed bug in source file splitting causing the float in x>=0. to get split.


KTIGCC 1.01 (2006-08-21):

* Find and Replace dialogs now remember history (but only for the current KTIGCC
  session).


KTIGCC 1.00 (2006-08-20):

* Added NEWS file containing the history information previously published in the
  changelog snippets on SourceForge.
* Fixed moving files across file systems after compilation not working.
* The RPM now associates .tpr files with KTIGCC in KDE and GNOME.


KTIGCC 20060814 beta:

Improvements:
* Kate's automatic indentation (ENTER indents the new line
  the same as the old one) is now enabled.
* The syntax highlighting descriptions are now
  automatically regenerated if they are missing or out of