@@ -380,232 +380,213 @@
                 <attribute name="title">
                     <string>Operating &amp;System</string>
                 </attribute>
-                <widget class="QLabel">
+                <vbox>
                     <property name="name">
-                        <cstring>textLabel4</cstring>
+                        <cstring>unnamed</cstring>
                     </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>11</x>
-                            <y>11</y>
-                            <width>425</width>
-                            <height>16</height>
-                        </rect>
-                    </property>
-                    <property name="text">
-                        <string>You also have to select the operating system it will run under.</string>
-                    </property>
-                    <property name="textFormat">
-                        <enum>PlainText</enum>
-                    </property>
-                    <property name="alignment">
-                        <set>WordBreak|AlignVCenter</set>
-                    </property>
-                </widget>
-                <widget class="QLayoutWidget">
-                    <property name="name">
-                        <cstring>layout18</cstring>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>11</x>
-                            <y>33</y>
-                            <width>425</width>
-                            <height>203</height>
-                        </rect>
-                    </property>
-                    <hbox>
+                    <widget class="QLabel">
                         <property name="name">
-                            <cstring>unnamed</cstring>
+                            <cstring>textLabel4</cstring>
                         </property>
-                        <spacer>
+                        <property name="text">
+                            <string>You also have to select the operating system it will run under.</string>
+                        </property>
+                        <property name="textFormat">
+                            <enum>PlainText</enum>
+                        </property>
+                        <property name="alignment">
+                            <set>WordBreak|AlignVCenter</set>
+                        </property>
+                    </widget>
+                    <widget class="QLayoutWidget">
+                        <property name="name">
+                            <cstring>layout18</cstring>
+                        </property>
+                        <hbox>
                             <property name="name">
-                                <cstring>spacer60</cstring>
+                                <cstring>unnamed</cstring>
                             </property>
-                            <property name="orientation">
-                                <enum>Horizontal</enum>
-                            </property>
-                            <property name="sizeType">
-                                <enum>Fixed</enum>
-                            </property>
-                            <property name="sizeHint">
-                                <size>
-                                    <width>20</width>
-                                    <height>20</height>
-                                </size>
-                            </property>
-                        </spacer>
-                        <widget class="QButtonGroup">
-                            <property name="name">
-                                <cstring>buttonGroup5</cstring>
-                            </property>
-                            <property name="frameShape">
-                                <enum>NoFrame</enum>
-                            </property>
-                            <property name="frameShadow">
-                                <enum>Plain</enum>
-                            </property>
-                            <property name="title">
-                                <string></string>
-                            </property>
-                            <vbox>
+                            <spacer>
                                 <property name="name">
-                                    <cstring>unnamed</cstring>
+                                    <cstring>spacer60</cstring>
                                 </property>
-                                <widget class="QRadioButton">
+                                <property name="orientation">
+                                    <enum>Horizontal</enum>
+                                </property>
+                                <property name="sizeType">
+                                    <enum>Fixed</enum>
+                                </property>
+                                <property name="sizeHint">
+                                    <size>
+                                        <width>20</width>
+                                        <height>20</height>
+                                    </size>
+                                </property>
+                            </spacer>
+                            <widget class="QButtonGroup">
+                                <property name="name">
+                                    <cstring>buttonGroup5</cstring>
+                                </property>
+                                <property name="frameShape">
+                                    <enum>NoFrame</enum>
+                                </property>
+                                <property name="frameShadow">
+                                    <enum>Plain</enum>
+                                </property>
+                                <property name="title">
+                                    <string></string>
+                                </property>
+                                <vbox>
                                     <property name="name">
-                                        <cstring>Nostub</cstring>
+                                        <cstring>unnamed</cstring>
                                     </property>
-                                    <property name="text">
-                                        <string>Any/no &amp;kernel</string>
-                                    </property>
-                                    <property name="accel">
-                                        <string>Alt+K</string>
-                                    </property>
-                                </widget>
-                                <widget class="QRadioButton">
-                                    <property name="name">
-                                        <cstring>UseKernel</cstring>
-                                    </property>
-                                    <property name="text">
-                                        <string>Recent &amp;Doors-compatible kernels</string>
-                                    </property>
-                                    <property name="accel">
-                                        <string>Alt+D</string>
-                                    </property>
-                                    <property name="toolTip" stdset="0">
-                                        <string>USE_KERNEL</string>
-                                    </property>
-                                </widget>
-                                <widget class="QRadioButton">
-                                    <property name="name">
-                                        <cstring>PreOS</cstring>
-                                    </property>
-                                    <property name="text">
-                                        <string>&amp;PreOS with compressed reloc table support</string>
-                                    </property>
-                                    <property name="accel">
-                                        <string>Alt+P</string>
-                                    </property>
-                                    <property name="toolTip" stdset="0">
-                                        <string>USE_PREOS_COMPRESSED_TABLES</string>
-                                    </property>
-                                </widget>
-                                <spacer>
-                                    <property name="name">
-                                        <cstring>spacer58</cstring>
-                                    </property>
-                                    <property name="orientation">
-                                        <enum>Vertical</enum>
-                                    </property>
-                                    <property name="sizeType">
-                                        <enum>Fixed</enum>
-                                    </property>
-                                    <property name="sizeHint">
-                                        <size>
-                                            <width>20</width>
-                                            <height>20</height>
-                                        </size>
-                                    </property>
-                                </spacer>
-                                <widget class="QLayoutWidget">
-                                    <property name="name">
-                                        <cstring>layout60</cstring>
-                                    </property>
-                                    <hbox>
+                                    <widget class="QRadioButton">
                                         <property name="name">
-                                            <cstring>unnamed</cstring>
+                                            <cstring>Nostub</cstring>
                                         </property>
-                                        <widget class="QCheckBox">
+                                        <property name="text">
+                                            <string>Any/no &amp;kernel</string>
+                                        </property>
+                                        <property name="accel">
+                                            <string>Alt+K</string>
+                                        </property>
+                                    </widget>
+                                    <widget class="QRadioButton">
+                                        <property name="name">
+                                            <cstring>UseKernel</cstring>
+                                        </property>
+                                        <property name="text">
+                                            <string>Recent &amp;Doors-compatible kernels</string>
+                                        </property>
+                                        <property name="accel">
+                                            <string>Alt+D</string>
+                                        </property>
+                                        <property name="toolTip" stdset="0">
+                                            <string>USE_KERNEL</string>
+                                        </property>
+                                    </widget>
+                                    <widget class="QRadioButton">
+                                        <property name="name">
+                                            <cstring>PreOS</cstring>
+                                        </property>
+                                        <property name="text">
+                                            <string>&amp;PreOS with compressed reloc table support</string>
+                                        </property>
+                                        <property name="accel">
+                                            <string>Alt+P</string>
+                                        </property>
+                                        <property name="toolTip" stdset="0">
+                                            <string>USE_PREOS_COMPRESSED_TABLES</string>
+                                        </property>
+                                    </widget>
+                                    <spacer>
+                                        <property name="name">
+                                            <cstring>spacer58</cstring>
+                                        </property>
+                                        <property name="orientation">
+                                            <enum>Vertical</enum>
+                                        </property>
+                                        <property name="sizeType">
+                                            <enum>Fixed</enum>
+                                        </property>
+                                        <property name="sizeHint">
+                                            <size>
+                                                <width>20</width>
+                                                <height>20</height>
+                                            </size>
+                                        </property>
+                                    </spacer>
+                                    <widget class="QLayoutWidget">
+                                        <property name="name">
+                                            <cstring>layout60</cstring>
+                                        </property>
+                                        <hbox>
                                             <property name="name">
-                                                <cstring>CMinimumAMSVersion</cstring>
+                                                <cstring>unnamed</cstring>
                                             </property>
-                                            <property name="text">
-                                                <string>&amp;Minimum AMS version:</string>
-                                            </property>
-                                            <property name="accel">
-                                                <string>Alt+M</string>
-                                            </property>
-                                            <property name="toolTip" stdset="0">
-                                                <string>MIN_AMS</string>
-                                            </property>
-                                        </widget>
-                                        <widget class="KLineEdit">
-                                            <property name="name">
-                                                <cstring>MinimumAMSVersion</cstring>
-                                            </property>
-                                            <property name="text">
-                                                <string>.</string>
-                                            </property>
-                                            <property name="inputMask">
-                                                <string>9.99; </string>
-                                            </property>
-                                            <property name="toolTip" stdset="0">
-                                                <string>MIN_AMS</string>
-                                            </property>
-                                        </widget>
-                                    </hbox>
-                                </widget>
-                                <spacer>
-                                    <property name="name">
-                                        <cstring>spacer59</cstring>
-                                    </property>
-                                    <property name="orientation">
-                                        <enum>Vertical</enum>
-                                    </property>
-                                    <property name="sizeType">
-                                        <enum>Fixed</enum>
-                                    </property>
-                                    <property name="sizeHint">
-                                        <size>
-                                            <width>20</width>
-                                            <height>20</height>
-                                        </size>
-                                    </property>
-                                </spacer>
-                                <widget class="QCheckBox">
-                                    <property name="name">
-                                        <cstring>UnofficialOSSupport</cstring>
-                                    </property>
-                                    <property name="text">
-                                        <string>&amp;Force unofficial operating system support</string>
-                                    </property>
-                                    <property name="accel">
-                                        <string>Alt+F</string>
-                                    </property>
-                                    <property name="toolTip" stdset="0">
-                                        <string>UNOFFICIAL_OS_SUPPORT</string>
-                                    </property>
-                                </widget>
-                            </vbox>
-                        </widget>
-                    </hbox>
-                </widget>
-                <spacer>
-                    <property name="name">
-                        <cstring>spacer61</cstring>
-                    </property>
-                    <property name="orientation">
-                        <enum>Vertical</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>280</height>
-                        </size>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>213</x>
-                            <y>242</y>
-                            <width>20</width>
-                            <height>280</height>
-                        </rect>
-                    </property>
-                </spacer>
+                                            <widget class="QCheckBox">
+                                                <property name="name">
+                                                    <cstring>CMinimumAMSVersion</cstring>
+                                                </property>
+                                                <property name="text">
+                                                    <string>&amp;Minimum AMS version:</string>
+                                                </property>
+                                                <property name="accel">
+                                                    <string>Alt+M</string>
+                                                </property>
+                                                <property name="toolTip" stdset="0">
+                                                    <string>MIN_AMS</string>
+                                                </property>
+                                            </widget>
+                                            <widget class="KLineEdit">
+                                                <property name="name">
+                                                    <cstring>MinimumAMSVersion</cstring>
+                                                </property>
+                                                <property name="text">
+                                                    <string>.</string>
+                                                </property>
+                                                <property name="inputMask">
+                                                    <string>9.99; </string>
+                                                </property>
+                                                <property name="toolTip" stdset="0">
+                                                    <string>MIN_AMS</string>
+                                                </property>
+                                            </widget>
+                                        </hbox>
+                                    </widget>
+                                    <spacer>
+                                        <property name="name">
+                                            <cstring>spacer59</cstring>
+                                        </property>
+                                        <property name="orientation">
+                                            <enum>Vertical</enum>
+                                        </property>
+                                        <property name="sizeType">
+                                            <enum>Fixed</enum>
+                                        </property>
+                                        <property name="sizeHint">
+                                            <size>
+                                                <width>20</width>
+                                                <height>20</height>
+                                            </size>
+                                        </property>
+                                    </spacer>
+                                    <widget class="QCheckBox">
+                                        <property name="name">
+                                            <cstring>UnofficialOSSupport</cstring>
+                                        </property>
+                                        <property name="text">
+                                            <string>&amp;Force unofficial operating system support</string>
+                                        </property>
+                                        <property name="accel">
+                                            <string>Alt+F</string>
+                                        </property>
+                                        <property name="toolTip" stdset="0">
+                                            <string>UNOFFICIAL_OS_SUPPORT</string>
+                                        </property>
+                                    </widget>
+                                </vbox>
+                            </widget>
+                        </hbox>
+                    </widget>
+                    <spacer>
+                        <property name="name">
+                            <cstring>spacer61</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Vertical</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Expanding</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>280</height>
+                            </size>
+                        </property>
+                    </spacer>
+                </vbox>
             </widget>
             <widget class="QWidget">
                 <property name="name">
