@@ -1,8 +1,10 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
-CVS HEAD (2006-10-24):
+CVS HEAD (2006-11-16):
 
 * Added Anjuta 2 project, removed Anjuta 1 project.
+* Fixed missing layout in the Operating System tab of the Program Options
+  dialog.
 
 
 KTIGCC 1.05 (2006-10-24):
